--- a/courses/Matematik ÅK 7/rendered.html
+++ b/courses/Matematik ÅK 7/rendered.html
@@ -90,7 +90,7 @@
 	<li>Antal barn i en skola: Om en skola har 200 elever, representeras detta av heltalet 200.</li>
 	<li>Temperaturer: En temperatur på -5 grader C eller 20 grader C är ett exempel på heltal.</li>
 	</ul>
-	<p><img src="https://example.com/heltal-illustration" alt="Illustration av heltal" /></p>
+	<p><img src="/courses/Matematik%20%C3%85K%207/0%20Tal%20och%20r%C3%A4kning/heltal-illustration.png" alt="Illustration av heltal" /></p>
 	<h2>Bråktal</h2>
 	<p>Bråktal används för att representera delar av helheter. Ett bråktal består av två heltal, ett täljare och ett nämnare, som skrivs i formen ( \frac{a}{b} ), där ( a ) är täljaren och ( b ) är nämnaren. Nämnaren kan inte vara noll, eftersom division med noll inte är definierad. Exempel på bråktal inkluderar ( \frac{1}{2} ), ( \frac{3}{4} ) och ( \frac{-5}{6} ).</p>
 	<p>Bråktal är särskilt användbara när man behöver ange en del av en helhet, som att dela upp en pizza eller mäta ingredienser i ett recept.</p>
@@ -99,7 +99,7 @@
 	<li>Recept: Om ett recept kräver ( \frac{2}{3} ) kopp socker, innebär det att man använder två tredjedelar av en kopp.</li>
 	<li>Dela en pizza: Om en pizza är skuren i 8 bitar och du äter 3, kan man uttrycka det som ( \frac{3}{8} ) av pizza.</li>
 	</ul>
-	<p><img src="https://example.com/braktal-illustration" alt="Illustration av bråktal" /></p>
+	<p><img src="/courses/Matematik%20%C3%85K%207/0%20Tal%20och%20r%C3%A4kning/braktal-illustration.png" alt="Illustration av bråktal" /></p>
 	<h2>Decimaltal</h2>
 	<p>Decimaltal är en annan form av tal som representerar värden mellan heltal. De skrivs med en decimalpunkt som separerar heltalsdelen från decimaldelen. Exempel på decimaltal är 0.5, 3.14 och -2.75. Decimaltal används ofta i situationer där noggrannhet är viktig, såsom vid mätningar, pengar och temperaturer.</p>
 	<h3>Exempel på användning av decimaltal:</h3>
@@ -107,7 +107,7 @@
 	<li>Mätning: Visar en längd på 2.5 meter indikerar att något är två och en halv meter långt.</li>
 	<li>Ekonomi: Om en vara kostar 19.99 kronor, presenteras detta som ett decimaltal.</li>
 	</ul>
-	<p><img src="https://example.com/decimaltal-illustration" alt="Illustration av decimaltal" /></p>
+	<p><img src="/courses/Matematik%20%C3%85K%207/0%20Tal%20och%20r%C3%A4kning/decimaltal-illustration.png" alt="Illustration av decimaltal" /></p>
 	<p>Genom att förstå dessa tre typer av tal kan man bygga en stabil grund för vidare studier inom matematik, inklusive mer avancerade områden som algebra, geometri och statistik. Att kunna arbeta med heltal, bråktal och decimaltal är avgörande för att lösa problem i vardagen såväl som inom olika vetenskapliga discipliner.</p>
 	<h1>Tal och räkning</h1>
 	<h2>Heltal</h2>
@@ -224,34 +224,6 @@
 	<li><strong>Hints:</strong> Tänk på hur många kulor av varje färg som finns i förhållande till det totala antalet kulor.</li>
 	<li><strong>Answer:</strong> Gröna kulor är mest sannolika att dras, eftersom det finns 15 gröna kulor av totalt 30 (10 röda + 5 blå + 15 gröna).</li>
 	</ul>
-	<h1>Tal och räkning</h1>
-	<p>Tal och räkning är grunden för matematik och används i många vardagliga sammanhang. För att förstå och arbeta med tal är det viktigt att ha en god insikt om de olika typerna av tal som existerar, nämligen heltal, bråktal och decimaltal. Varje typ av tal har sina egna egenskaper och användningsområden, vilket vi kommer att utforska i de följande avsnitten.</p>
-	<h2>Heltal</h2>
-	<p>Heltal är de enklaste formerna av tal och representerar hela enheter utan några decimaltal eller bråk. Heltalen inkluderar både positiva och negativa tal samt noll. Exempel på heltal är -3, 0, 1, 27 och 150. Heltal används ofta för att räkna objekt, som antalet äpplen i en korg eller antalet deltagare i en klass.</p>
-	<h3>Exempel på användning av heltal:</h3>
-	<ul>
-	<li>Antal barn i en skola: Om en skola har 200 elever, representeras detta av heltalet 200.</li>
-	<li>Temperaturer: En temperatur på -5 grader C eller 20 grader C är ett exempel på heltal.</li>
-	</ul>
-	<p><img src="/heltal-illustration.png" alt="Illustration av heltal" /></p>
-	<h2>Bråktal</h2>
-	<p>Bråktal används för att representera delar av helheter. Ett bråktal består av två heltal, ett täljare och ett nämnare, som skrivs i formen ( \frac{a}{b} ), där ( a ) är täljaren och ( b ) är nämnaren. Nämnaren kan inte vara noll, eftersom division med noll inte är definierad. Exempel på bråktal inkluderar ( \frac{1}{2} ), ( \frac{3}{4} ) och ( \frac{-5}{6} ).</p>
-	<p>Bråktal är särskilt användbara när man behöver ange en del av en helhet, som att dela upp en pizza eller mäta ingredienser i ett recept.</p>
-	<h3>Exempel på användning av bråktal:</h3>
-	<ul>
-	<li>Recept: Om ett recept kräver ( \frac{2}{3} ) kopp socker, innebär det att man använder två tredjedelar av en kopp.</li>
-	<li>Dela en pizza: Om en pizza är skuren i 8 bitar och du äter 3, kan man uttrycka det som ( \frac{3}{8} ) av pizza.</li>
-	</ul>
-	<p><img src="/braktal-illustration.png" alt="Illustration av bråktal" /></p>
-	<h2>Decimaltal</h2>
-	<p>Decimaltal är en annan form av tal som representerar värden mellan heltal. De skrivs med en decimalpunkt som separerar heltalsdelen från decimaldelen. Exempel på decimaltal är 0.5, 3.14 och -2.75. Decimaltal används ofta i situationer där noggrannhet är viktig, såsom vid mätningar, pengar och temperaturer.</p>
-	<h3>Exempel på användning av decimaltal:</h3>
-	<ul>
-	<li>Mätning: Visar en längd på 2.5 meter indikerar att något är två och en halv meter långt.</li>
-	<li>Ekonomi: Om en vara kostar 19.99 kronor, presenteras detta som ett decimaltal.</li>
-	</ul>
-	<p><img src="/decimaltal-illustration.png" alt="Illustration av decimaltal" /></p>
-	<p>Genom att förstå dessa tre typer av tal kan man bygga en stabil grund för vidare studier inom matematik, inklusive mer avancerade områden som algebra, geometri och statistik. Att kunna arbeta med heltal, bråktal och decimaltal är avgörande för att lösa problem i vardagen såväl som inom olika vetenskapliga discipliner.</p>
 	<h1>Tal och räkning</h1>
 	<h2>Heltal</h2>
 	<p>Heltal är grundläggande matematiska enheter som används för att representera hela mängder, utan bråkdelar eller decimaler. Heltalen innefattar både positiva och negativa tal, samt noll. De kan skrivas som:</p>
