--- a/courses/Matematik ÅK 7/rendered.html
+++ b/courses/Matematik ÅK 7/rendered.html
@@ -87,7 +87,7 @@
 	<li>Antal barn i en skola: Om en skola har 200 elever, representeras detta av heltalet 200.</li>
 	<li>Temperaturer: En temperatur på -5 grader C eller 20 grader C är ett exempel på heltal.</li>
 	</ul>
-	<p>![Illustration av heltal](&lt;&lt;/courses/Matematik ÅK 7/0 Tal och räkning/heltal-illustration.png&gt;&gt;)</p>
+	<p><img src="/courses/Matematik%20%C3%85K%207/0%20Tal%20och%20r%C3%A4kning/heltal-illustration.png" alt="Illustration av heltal" /></p>
 	<h2 id="Bråktal">Bråktal</h2>
 	<p>Bråktal används för att representera delar av helheter. Ett bråktal består av två heltal, ett täljare och ett nämnare, som skrivs i formen ( \frac{a}{b} ), där ( a ) är täljaren och ( b ) är nämnaren. Nämnaren kan inte vara noll, eftersom division med noll inte är definierad. Exempel på bråktal inkluderar ( \frac{1}{2} ), ( \frac{3}{4} ) och ( \frac{-5}{6} ).</p>
 	<p>Bråktal är särskilt användbara när man behöver ange en del av en helhet, som att dela upp en pizza eller mäta ingredienser i ett recept.</p>
@@ -96,7 +96,7 @@
 	<li>Recept: Om ett recept kräver ( \frac{2}{3} ) kopp socker, innebär det att man använder två tredjedelar av en kopp.</li>
 	<li>Dela en pizza: Om en pizza är skuren i 8 bitar och du äter 3, kan man uttrycka det som ( \frac{3}{8} ) av pizza.</li>
 	</ul>
-	<p>![Illustration av bråktal](&lt;&lt;/courses/Matematik ÅK 7/0 Tal och räkning/braktal-illustration.png&gt;&gt;)</p>
+	<p><img src="/courses/Matematik%20%C3%85K%207/0%20Tal%20och%20r%C3%A4kning/braktal-illustration.png" alt="Illustration av bråktal" /></p>
 	<h2 id="Decimaltal">Decimaltal</h2>
 	<p>Decimaltal är en annan form av tal som representerar värden mellan heltal. De skrivs med en decimalpunkt som separerar heltalsdelen från decimaldelen. Exempel på decimaltal är 0.5, 3.14 och -2.75. Decimaltal används ofta i situationer där noggrannhet är viktig, såsom vid mätningar, pengar och temperaturer.</p>
 	<h3 id="Exempel på användning av decimaltal:">Exempel på användning av decimaltal:</h3>
@@ -104,7 +104,7 @@
 	<li>Mätning: Visar en längd på 2.5 meter indikerar att något är två och en halv meter långt.</li>
 	<li>Ekonomi: Om en vara kostar 19.99 kronor, presenteras detta som ett decimaltal.</li>
 	</ul>
-	<p>![Illustration av decimaltal](&lt;&lt;/courses/Matematik ÅK 7/0 Tal och räkning/decimaltal-illustration.png&gt;&gt;)</p>
+	<p><img src="/courses/Matematik%20%C3%85K%207/0%20Tal%20och%20r%C3%A4kning/decimaltal-illustration.png" alt="Illustration av decimaltal" /></p>
 	<p>Genom att förstå dessa tre typer av tal kan man bygga en stabil grund för vidare studier inom matematik, inklusive mer avancerade områden som algebra, geometri och statistik. Att kunna arbeta med heltal, bråktal och decimaltal är avgörande för att lösa problem i vardagen såväl som inom olika vetenskapliga discipliner.</p>
 	<h1 id="Tal och räkning">Tal och räkning</h1>
 	<h2 id="Heltal">Heltal</h2>
@@ -244,7 +244,7 @@
 	<li>( -3 - 2 = -5 )</li>
 	</ul>
 	<p>Det är viktigt att förstå tecknet på talen när man utför operationer med heltal. Med hjälp av en talinje kan man visualisera addition och subtraktion.</p>
-	<p>![Tal linje](&lt;&lt;/courses/Matematik ÅK 7/0 Tal och räkning/0.0 Heltal/tal-linje.png&gt;&gt;)</p>
+	<p><img src="/courses/Matematik%20%C3%85K%207/0%20Tal%20och%20r%C3%A4kning/0.0%20Heltal/tal-linje.png" alt="Tal linje" /></p>
 	<h3 id="Multiplikation och division av heltal">Multiplikation och division av heltal</h3>
 	<p>Multiplikation av heltal är en upprepande addition av heltal. Precis som med addition och subtraktion så får vi även här olika resultat beroende på om vi multiplicerar positiva eller negativa tal.</p>
 	<p><strong>Exempel:</strong></p>
@@ -265,7 +265,7 @@
 	</ul>
 	<p>Precis som vid addition och subtraktion spelar tecknet en viktig roll vid multiplikation och division.</p>
 	<p>Det ärbra att använda multiplikations- och divisions-tabeller för att underlätta beräkningar med heltal. Dessa tabeller kan också fungera som referens för att lära sig mer om relationerna mellan olika tal.</p>
-	<p>![Multiplikationstabell](&lt;&lt;/courses/Matematik ÅK 7/0 Tal och räkning/0.0 Heltal/multiplikationstabell.png&gt;&gt;)</p>
+	<p><img src="/courses/Matematik%20%C3%85K%207/0%20Tal%20och%20r%C3%A4kning/0.0%20Heltal/multiplikationstabell.png" alt="Multiplikationstabell" /></p>
 	<p>Sammanfattningsvis kan vi säga att heltal är en central del av matematiken som används i många olika situationer och för olika syften. Att behärska operationer med heltal är en viktig grundkompetens för att kunna lösa mer komplexa matematiska problem.</p>
 	<h1 id="Tal och räkning">Tal och räkning</h1>
 	<h2 id="----&gt; Heltal">----&gt; Heltal</h2>
@@ -338,7 +338,7 @@
 	<ul>
 	<li>( 3 + 5 = 8 )</li>
 	</ul>
-	<p><img src="https://example.com/addition-av-positiva-heltal.png" alt="Addition av positiva heltal" /></p>
+	<p><img src="/courses/Matematik%20%C3%85K%207/0%20Tal%20och%20r%C3%A4kning/0.0%20Heltal/0.0.0%20Addition%20och%20subtraktion%20av%20heltal/addition-av-positiva-heltal.png" alt="Addition av positiva heltal" /></p>
 	</li>
 	<li><p><strong>Negativa tal:</strong> När man adderar två negativa heltal, får man ett negativt resultat. Till exempel:</p>
 	<ul>
@@ -454,7 +454,7 @@
 	<p>Multiplikation av heltal handlar om att addera ett heltal till sig själv ett visst antal gånger. Om vi till exempel har talet 3 och multiplicerar det med 4, innebär det att vi lägger till talet 3 fyra gånger:</p>
 	<p>[ 3 \times 4 = 3 + 3 + 3 + 3 = 12 ]</p>
 	<p>Vi kan också uttrycka multiplikation som en visuell gruppning. Föreställ dig att du har 4 grupper med 3 äpplen i varje grupp:</p>
-	<p><img src="https://example.com/multiplikation_av_heltal.png" alt="Multiplikation av heltal" /></p>
+	<p><img src="/courses/Matematik%20%C3%85K%207/0%20Tal%20och%20r%C3%A4kning/0.0%20Heltal/0.0.1%20Multiplikation%20och%20division%20av%20heltal/multiplikation_av_heltal.png" alt="Multiplikation av heltal" /></p>
 	<p>I detta exempel representerar 4 grupper av 3 äpplen den matematiska operationen (3 \times 4), vilket ger oss totalt 12 äpplen.</p>
 	<h5 id="Egenskaper av multiplikation">Egenskaper av multiplikation</h5>
 	<ol>
@@ -472,7 +472,7 @@
 	<p>Division av heltal är i grunden motsatsen till multiplikation. Det handlar om att dela ett heltal i ett visst antal lika delar. Till exempel, om vi har 12 äpplen och vill dela dem mellan 4 personer, frågar vi hur många äpplen varje person får:</p>
 	<p>[ 12 \div 4 = 3 ]</p>
 	<p>Detta innebär att varje person får 3 äpplen. Vi kan illustrera detta med en bild som visar hur 12 äpplen delas upp i 4 grupper:</p>
-	<p><img src="https://example.com/division_av_heltal.png" alt="Division av heltal" /></p>
+	<p><img src="/courses/Matematik%20%C3%85K%207/0%20Tal%20och%20r%C3%A4kning/0.0%20Heltal/0.0.1%20Multiplikation%20och%20division%20av%20heltal/division_av_heltal.png" alt="Division av heltal" /></p>
 	<h5 id="Egenskaper av division">Egenskaper av division</h5>
 	<ol>
 	<li><p><strong>Ingen kommutativitet:</strong> Division är inte kommutativ, vilket innebär att ( a \div b ) inte nödvändigtvis är lika med ( b \div a ).
@@ -532,7 +532,7 @@
 	<p>Bråktal är tal som representerar ett förhållande mellan två heltal, där det första talet kallas täljare och det andra nämnare. De skrivs ofta i formen (\frac{a}{b}), där (a) är täljaren och (b) är nämnaren. Bråktal används för att uttrycka delar av en helhet, och de är en viktig del av matematik och vardagligt liv.</p>
 	<h3 id="Exempel på bråktal">Exempel på bråktal</h3>
 	<p>Ett enkelt exempel på ett bråktal är (\frac{3}{4}), vilket betyder att vi har tre delar av något som har delats upp i fyra lika stora delar. Om du har en pizza som är delad i fyra bitar och du har 3 av dem, så kan det uttryckas som (\frac{3}{4}).</p>
-	<p><img src="https://example.com/pizza_delad_i_fyra" alt="Pizza delad i fyra" /></p>
+	<p><img src="/courses/Matematik%20%C3%85K%207/0%20Tal%20och%20r%C3%A4kning/0.1%20Br%C3%A5ktal/pizza_delad_i_fyra.png" alt="Pizza delad i fyra" /></p>
 	<h3 id="Typer av bråktal">Typer av bråktal</h3>
 	<p>Bråktal kan delas in i tre huvudkategorier:</p>
 	<ol>
